# elgamal-shuffle

./: .gitignore  Bayer-Groth-Implementation.py  Cargo.toml  README.md  ]  easy_push.sh  pdf.sh  thesis.toc
.github/workflows/: rust.yml
src/: arguers.rs  enums.rs  errors.rs  hadamard_prover.rs  lib.rs  main.rs  mat_traits.rs  mat_utils.rs  mexp_prover.rs  mod.rs  prod_prover.rs  prover.rs  sv_prover.rs  traits.rs  transcript.rs  utils.rs  vec_traits.rs  vec_utils.rs  zero_prover.rs
src/provers/: hadamard_prover.rs  mexp_prover.rs  mod.rs  prod_prover.rs  prover.rs  sv_prover.rs  zero_prover.rs
src/traits/: mat_traits.rs  mod.rs  traits.rs  vec_traits.rs
src/utils/: enums.rs  mat_utils.rs  mod.rs  transcript.rs  utils.rs  vec_utils.rs
thesis/: dec_signed.pdf:Zone.Identifier  thesis.aux  thesis.bbl  thesis.bcf  thesis.bib  thesis.blg  thesis.lot  thesis.out  thesis.tex  thesis.toc  thesis_corrected.tex  thesis_corrected.tex:Zone.Identifier
