[package]
name = "elgamal-shuffle"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "GPL"
repository = "https://github.com/ercembu/elgamal-shuffle"
categories = ["cryptography"]
keywords = ["cryptography", "zero-knowledge", "ristretto", "shuffle", "ElGamal"]
description = "A pure-Rust implementation of ZK Correctness of a Shuffle for ElGamal"

[dependencies]
rust-elgamal = {version="0.4.0", default-features = true}
curve25519-dalek = {version = "*"}
merlin = {version="*" }
rand = {version = "*"}
itertools = {version="*"}
