cargo-features = ["edition2024"]
[package]
name = "elgamal-shuffle"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "GPL"
repository = "https://github.com/ercembu/elgamal-shuffle"
categories = ["cryptography"]
keywords = ["cryptography", "zero-knowledge", "ristretto", "shuffle", "ElGamal"]
description = "A pure-Rust implementation of ZK Correctness of a Shuffle for ElGamal"
[features]
nightly = ["curve25519-dalek/nightly"]
default = ["std"]
# cannot call the feature "serde" (yet)
enable-serde = ["serde", "curve25519-dalek/serde"]
simd_backend = ["nightly", "curve25519-dalek/simd_backend"]
std = ["curve25519-dalek/std", "rand_core/std", "serde/std"]

[dependencies]
# simd_backend extends u64_backend
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default_features = false, features = ["alloc", "u64_backend"] }
rust-elgamal = {version="0.4.0", default-features = true}
merlin = {version="*" }
rand = {version = "*"}
itertools = {version="*"}
serde = { version = "1", default_features = false, features = ["derive"], optional = true }
rand_core = { version = "0.6", default_features = false }
bulletproofs = {version= "*", default_features=false}
ethnum = {version="*"}
