cargo-features = ["edition2024"]
[package]
name = "elgamal-shuffle"
version = "0.1.0"
edition = "2024"
[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "GPL"
repository = "https://github.com/ercembu/elgamal-shuffle"
categories = ["cryptography"]
keywords = ["cryptography", "zero-knowledge", "ristretto", "shuffle", "ElGamal"]
description = "A pure-Rust implementation of ZK Correctness of a Shuffle for ElGamal"
[features]
nightly = ["curve25519-dalek/nightly"]
default = ["std"]
simd_backend = ["nightly", "curve25519-dalek/simd_backend"]
std = ["curve25519-dalek/std", "rand_core/std"]

[dependencies]
# simd_backend extends u64_backend
signal-hook = "0.3.4"
plotters = "0.3.6"
cargo-readme = {version="*"}
rand_chacha = {version="*"}
katex-doc = {version="*"}
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["alloc", "u64_backend"] }
rust-elgamal = {version="0.4.0", default-features = true}
merlin = {version="*" }
rand = {version = "*"}
itertools = {version="*"}
rand_core = { version = "0.6", default-features = false }
bulletproofs = {version= "*", default-features=false}
ethnum = {version="*"}
len-trait = {version="*"}
thiserror = {version="*"}
